Merge branch 'master' into spoofax-release